--- a/econ101.html
+++ b/econ101.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/note.css">
+        <link rel="stylesheet" href="./css/econ101Use.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
         <!-- stylesheet found from w3school. (icon use)-->
         <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -124,6 +125,7 @@
             <div class="lec2">
                 <h3>Lecture 2 - 05/01/2018</h3>
                 <hr>
+                <h4 class="title">Chapter 1 - Key Concepts in Economics</h4>
                 <b>The Core Ideas Of Economics</b>
                 <p>
                     All economic questions occur since <span class="key">we want more than we can get</span>.<br>
@@ -254,6 +256,185 @@
                 </p>
             </div>
             <hr>
+            <div class="lec3">
+                <h3>Lecture 3 - 08/01/2018</h3>
+                <hr>
+                <b>Two Big Economic Questions</b>
+                <p>
+                    <span class="key">Can the pursuit of self-interest promote the social interest?</span><br>
+                    People need to make economic choices that result in <span class="key">what</span>, <span class="key">how</span> and <span class="key">for whom</span> goods and services are produced every day.<br>
+                </p>
+                <ul>
+                    <li>Do we produce the right things in the right quantities?</li>
+                    <li>Do we use our factors of production in the best way?</li>
+                    <li>Do the goods and services go to those who should get them?</li>
+                </ul>
+                <p>
+                    <span class="key">Expropriation of Private Property</span><br>
+                    This happens when the government takes private property for public purpose.<br>
+                    For example, the government wants to take the private land for building a road.<br>
+                    The land owner will get "compensated", but not as much as he/she would like to have.<br>
+                    The government will offer the market price for buying the land from the owner.<br>
+                    However, the owner may not want to sell the land; he/she may want more that the market price.<br>
+                    Of course, the owner may have his/her own personal reason for not selling the land.<br>
+                    The government may force to take the land because of social interest.<br>
+                    Is this fair? Is it in the social interest?<br>
+                    This is why not everyone agree with social interest.<br>
+                </p>
+                <br>
+                <b>The Economic Way of Thinking</b>
+                <ul>
+                    <li>a choice is a <span class="key">tradeoff</span></li>
+                    <li>people make <span class="key">rational choices (or "purposeful")</span> by comparing benefits and costs</li>
+                    <li><span class="key">benefit</span> is what you gain from something</li>
+                    <li><span class="key">cost</span> is what you must give up to get something</li>
+                    <li>most choices are "how much" choices made at the <span class="key">margin</span></li>
+                    <li>choices respond to <span class="key">incentives</span></li>
+                </ul>
+                <p>
+                    People will make the choice which is better of themselves, but not for the society.<br>
+                </p>
+                <br>
+                <b>Thinking about Our Actions as Choices</b>
+                <p>
+                    Example: Going to university for 4+ years as a choice<br>
+                    <br>
+                    What will we give up?<br> Time, the salary we can get from a job, ...<br>
+                    These are our opportunity cost.<br>
+                    <br>
+                    What do we expect benefits?<br> Knowledges, a better salary after graduation, ...<br>
+                    These are our expected benefits.<br>
+                </p>
+                <br>
+                <ul>
+                    <li>
+                        <span class="key">Rational Choice</span>
+                        <ul>
+                            <li>it compares costs and benefits and achieves the greatest benefit over cost for the person making the choice</li>
+                            <li>it does NOT mean smart choice</li>
+                            <li>it is the choice that makes people feel good</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>
+                    Only the wants of the person making a choice are relevant to determine its rationality.<br>
+                    <br>
+                    Question: <span class="key">What</span> goods and services will be produced and in what quantities?<br>
+                    Answer: Those that people rationally choice to buy!<br>
+                </p>
+                <br>
+                <b>Economics: A Social Science and Policy Tool</b>
+                <p>
+                    Economists are the social scientists; they distinguish between two types of statements:<br>
+                </p>
+                <ul>
+                    <li>
+                        Positive Statements: What <span class="key">is</span>
+                        <ul>
+                            <li>can be tested by checking it against facts</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Normative Statements: What <span class="key">ought to be</span>
+                        <ul>
+                            <li>expresses an opinion and cannot be tested</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>
+                    <span class="key">Understand the Cause and the Effect</span><br>
+                    The task of economic science is to discover positive statements that are consistent with what we observe in the world and that enable us to understand how the economic world works.<br>
+                    Economists create and test <span class="key">economic models</span>.<br>
+                </p>
+                <ul>
+                    <li>
+                        <span class="key">Economic Model</span>
+                        <ul>
+                            <li>a description of some aspect of the economic world that includes only those features that are needed for the purpose at hand</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>
+                    Economists are also the policy advisors.<br>
+                    Economics is a set of tools for advising governments, businesses and for making personal decisions.<br>
+                    All the policy questions on which economists provide advice involve a blend of the positive and the normative.<br>
+                    Economics can't help with the normative part (the goal).<br>
+                    But for a given goal, economics provides a method of evaluating alternative solutions — comparing marginal benefits and marginal costs.<br>
+                </p>
+                <h4 class="title">Chapter 1 - Key Concepts in Economics</h4>
+                <h5 class="title">The End</h5>
+                <br>
+                <h4 class="title">Chapter 2 - The Economic Problem</h4>
+                <p>
+                    In election campaigns, candidates often make a lot of promises, which people want to have/change.<br>
+                    For example, more and better health care, better roads/bridges/sewer systems, better education, etc.<br>
+                    <br>
+                    The concept of <span class="key">Production Possibilities Frontier (PPF)</span> helps us to understand why these promises are unrealistic.<br>
+                </p>
+                <br>
+                <b>The Story behind the Production Possibilities Frontier</b>
+                <p>
+                    There is a limited amount of factors of production (land, labour, capital, entrepreneurship) in an economy anytime.<br>
+                    For example, time is limited - you may focus on one course and get a high mark, but the other courses will not do well.<br>
+                    <br>
+                    The factors of production can be employed to produce goods and services that people want.<br>
+                    For example, we think more pizza should be produced in Canada.<br>
+                    Thus, we need to employ more factors of production in the production of pizza.<br>
+                    That is, more land for pizza restaurants, more people to build new restaurants, more machines, more backers, etc.<br>
+                    But we cannot create something out of nothing, the additional resources will have to come from other places.<br>
+                    Assume there are only two industries: pizza and cola.<br>
+                    Then the additional resources will come from the production of cola.<br>
+                    <br>
+                    The figure below shows the production possibilities frontier for two goods: cola and pizza.<br>
+                </p>
+                <table>
+                    <tr>
+                        <td class="displayTable">
+                            <table>
+                                <tr>
+                                    <th>Possibility</th>
+                                    <th>Pizza (millions)</th>
+                                    <th>Cola (millions of cans)</th>
+                                </tr>
+                                <tr>
+                                    <td>A</td>
+                                    <td>0</td>
+                                    <td>15</td>
+                                </tr>
+                                <tr>
+                                    <td>B</td>
+                                    <td>1</td>
+                                    <td>14</td>
+                                </tr>
+                                <tr>
+                                    <td>C</td>
+                                    <td>2</td>
+                                    <td>12</td>
+                                </tr>
+                                <tr>
+                                    <td>D</td>
+                                    <td>3</td>
+                                    <td>9</td>
+                                </tr>
+                                <tr>
+                                    <td>E</td>
+                                    <td>4</td>
+                                    <td>5</td>
+                                </tr>
+                                <tr>
+                                    <td>F</td>
+                                    <td>5</td>
+                                    <td>0</td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td class="displayTableRight">
+                            <img src="./image/econ101/lec3/3_1.PNG" width="100%" height="100%">
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <hr>
             <p>
                 Find a typo or mistake? Feel free to contact me and I will correct it as soon as possible.
             </p>
@@ -273,7 +454,7 @@
                     <i class="fa fa-github-square"></i>
                 </a>
                 <br>
-                <p>Chun Kit (Calvin) Li &copy; 2017 - 2018</p>
+                <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a> This work by <a xmlns:cc="http://creativecommons.org/ns#" href="https://vertli.github.io/" property="cc:attributionName" rel="cc:attributionURL">Chun Kit (Calvin) Li</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. Chun Kit (Calvin) Li &copy; 2017 - 2018</p>
                 <br>
             </div>
         </div>
