--- a/cs246_1.html
+++ b/cs246_1.html
@@ -415,7 +415,7 @@
                     <i class="fa fa-github-square"></i>
                 </a>
                 <br>
-                <p>Chun Kit (Calvin) Li &copy; 2017 - 2018</p>
+                <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a> This work by <a xmlns:cc="http://creativecommons.org/ns#" href="https://vertli.github.io/" property="cc:attributionName" rel="cc:attributionURL">Chun Kit (Calvin) Li</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. Chun Kit (Calvin) Li &copy; 2017 - 2018</p>
                 <br>
             </div>
         </div>
