--- a/econ101.html
+++ b/econ101.html
@@ -429,7 +429,7 @@
                             </table>
                         </td>
                         <td class="displayTableRight">
-                            <img src="./image/econ101/lec3/3_1.PNG" width="100%" height="100%">
+                            <img src="./image/econ101/lec3/3_1.png" width="100%" height="100%">
                         </td>
                     </tr>
                 </table>
